--- a/healthcheckapp 2/healthcheckapp/Form1.resx
+++ b/healthcheckapp 2/healthcheckapp/Form1.resx
@@ -57,11 +57,11 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="System.Drawing.Common" name="System.Drawing.Common, Version=4.0.2.2, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51" />
-  <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAgAAAAIACAYAAAD0eNT6AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wQAADsEBuJFr7QAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAF3wSURBVHhe7d0J
+        vwAADr8BOAVTJAAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAF3wSURBVHhe7d0J
         2G5T3T/wx3FwkClTHHMyUyJSxgZCKUKihCiveIuKNCe9/mnQpEFvhjRokNIgafBW8pZmMiQNSlQI0US9
         /+/3sR7WWed7nvPce6297z18f9f1uS7WeZ611r3Xb699P/e991oT//d//2dmLYeYA3NhC9gF9oUj4VXw
         djgHPg2fh4vhUrgcfgBXwfXwG7gF/gz3wH0B/5tl/Df+DH+Wv8PfZR2si3WybrbBttgm22Yf2Bf2iX1j
